_sass/minima/_layout.scss
/**
 * Page content
 */
.page-content {
  width       : $max-width;
  margin-left : auto;
  margin-right: auto;
  padding     : $spacing-unit 0;
}

/**
 * Site header
 */
.site-header {
  width        : $max-width;
  margin-left  : auto;
  margin-right : auto;
  border-top   : 5px solid $brand-color-dark;
  border-bottom: 1px solid $brand-color-light;
  min-height   : $spacing-unit * 1.865;
  line-height  : $base-line-height * $base-font-size * 2.25;
}

.site-title {
  @include relative-font-size(1.625);
  font-weight   : 300;
  letter-spacing: -1px;
  margin-bottom : 0;
  float         : left;
  padding       : 0.2em;
}

.site-nav {
  position           : relative;
  float              : right;
  background-color   : $background-color;
  border             : none;
  text-align         : right;
  padding            : 0.2em;

  .nav-trigger {
    display: none;
  }

  .menu-icon {
    float      : right;
    width      : 36px;
    height     : 26px;
    line-height: 0;
    padding-top: 10px;
    text-align : center;

    >svg path {
      fill: $brand-color-dark;
    }
  }

  label[for="nav-trigger"] {
    display: block;
    float  : right;
    width  : 36px;
    height : 36px;
    z-index: 2;
    cursor : pointer;
  }

  input~.trigger {
    clear  : both;
    display: none;
  }

  input:checked~.trigger {
    display       : block;
    padding-bottom: 5px;
  }

  .page-link {
    color      : $text-color;
    line-height: $base-line-height;
    display    : inline;
    padding    : 0;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }

    margin-left: auto;
  }
}


/**
 * Site footer
 */
.site-footer {
  width        : $max-width;
  margin-left  : auto;
  margin-right : auto;
  border-top: 1px solid $brand-color-light;
  padding   : $spacing-unit/2 0;
}

// .footer-heading {
//   @include relative-font-size(1.125);
//   margin-bottom: $spacing-unit / 2;
// }

// .feed-subscribe .svg-icon {
//   padding: 5px 5px 2px 0
// }

.contact-list,
.social-media-list {
  list-style : none;
  margin-left: 0;
}

.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $brand-color;
  padding: 0.2em;
}


// .page-heading {
//   @include relative-font-size(2);
// }

// .post-list-heading {
//   @include relative-font-size(1.75);
// }

// .post-list {
//   margin-left: 0;
//   list-style : none;

//   >li {
//     margin-bottom: $spacing-unit;
//   }
// }

// .post-meta {
//   font-size: $small-font-size;
//   color    : $brand-color;
// }

// .post-link {
//   display: block;
//   @include relative-font-size(1.5);
// }



// /**
//  * Posts
//  */
// .post-header {
//   margin-bottom: $spacing-unit;
// }

// .post-title,
// .post-content h1 {
//   @include relative-font-size(2.625);
//   letter-spacing: -1px;
//   line-height   : 1.15;

//   @media screen and (min-width: $on-large) {
//     @include relative-font-size(2.625);
//   }
// }

// .post-content {
//   margin-bottom: $spacing-unit;

//   h1,
//   h2,
//   h3 {
//     margin-top: $spacing-unit * 2
//   }

//   h4,
//   h5,
//   h6 {
//     margin-top: $spacing-unit
//   }

//   h2 {
//     @include relative-font-size(1.75);

//     @media screen and (min-width: $on-large) {
//       @include relative-font-size(2);
//     }
//   }

//   h3 {
//     @include relative-font-size(1.375);

//     @media screen and (min-width: $on-large) {
//       @include relative-font-size(1.625);
//     }
//   }

//   h4 {
//     @include relative-font-size(1.25);
//   }

//   h5 {
//     @include relative-font-size(1.125);
//   }

//   h6 {
//     @include relative-font-size(1.0625);
//   }
// }


.social-media-list {
  display: table;
  margin : -0.2em auto -1.2em;

  li {
    float : left;
    margin: 5px 10px 5px 0;

    &:last-of-type {
      margin-right: 0
    }

    a {
      display: block;
      padding: $spacing-unit / 4;
      border : 1px solid transparent;

      &:hover {
        border-color: $that-orange
      }
    }
  }
}



// /**
//  * Pagination navbar
//  */
// .pagination {
//   margin-bottom: $spacing-unit;
//   @extend .social-media-list;

//   li {

//     a,
//     div {
//       min-width : 41px;
//       text-align: center;
//       box-sizing: border-box;
//     }

//     div {
//       display: block;
//       padding: $spacing-unit / 4;
//       border : 1px solid transparent;

//       &.pager-edge {
//         color : darken($brand-color-light, 5%);
//         border: 1px dashed;
//       }
//     }
//   }
// }



/**
 * Grid helpers
 */
@media screen and (min-width: $on-large) {
  .one-half {
    width: calc(50% - (#{$spacing-unit} / 2));
  }
}

